Fixed GiveManageRecurringCard, cards breaking design on mobile

--- a/src/pages/users/Give/GiveManageRecurringCard.scss
+++ b/src/pages/users/Give/GiveManageRecurringCard.scss
@@ -7,6 +7,7 @@
   padding: 52px;
   @media (max-width: 768px) {
     background-color: #efeff0;
+    min-height: auto;
     padding: 26px;
   }
   .PaymentMethodCardGrid {
